--- a/style.css
+++ b/style.css
@@ -650,6 +650,12 @@ font-size: 10px;
     .box9 p{
         font-size: 12px;
     }
+    .box4 h3{
+        font-size: 14px;
+    }
+    .box4 p{
+        font-size: 10px;
+    }
     .services h1{
         font-size: 20px;
     }
